# jetwave

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
assets/: dark-scene.json  test-scene.json
assets/scenes/: chess-gltf.json  dark-scene.json  sponza-gltf.json  test-gltf.json  test-scene.json
assets/scenes/tests/: full-moon-test.json  white-furnace-test.json
src/: Core.hpp  ILogOutput.hpp  Logging.hpp  MainApp.cpp  MainApp.hpp  main.cpp
src/Asset/: Common.hpp  GLTFModelLoader.cpp  GLTFModelLoader.hpp  IModelLoader.hpp  MeshGenerator.hpp
src/Graphics/: AABB.hpp  BSDF.hpp  BVH.hpp  Camera.hpp  Fragment.hpp  IBxDF.hpp  ILight.hpp  IMaterial.hpp  ISamplerState.hpp  IShape.hpp  ITextureView.hpp  Mesh.hpp  Random.hpp  Ray.hpp  Trimesh.hpp
src/Graphics/BxDFs/: DiffuseReflection.hpp  GgxMicrofacetBrdf.hpp  GgxMicrofacetBtdf.hpp  LambertBrdf.hpp  LambertReflection.hpp  MicrofacetBrdf.hpp  MicrofacetReflection.hpp  OrenNayarBrdf.hpp  PassthroughBtdf.hpp
src/Graphics/BxDFs/Common/: Microfacet.hpp
src/Graphics/Lights/: AreaLight.hpp  DirectionalLight.hpp  PointLight.hpp
src/Graphics/Materials/: BasicMaterial.hpp  BasicOrenMaterial.hpp  ClearcoatMaterial.hpp  EmissiveMaterial.hpp  GlassMaterial.hpp  GltfMaterial.hpp  GridCutoutMaterial.hpp  GridMaterial.hpp  MetallicMaterial.hpp  TriangleDebugMaterial.hpp
src/Graphics/SamplerStates/: LinearWrapSampler.hpp  NearestWrapSampler.hpp  SkyboxSampler.hpp
src/Graphics/Shapes/: BVH.hpp  Box.hpp  Plane.hpp  Sphere.hpp  Triangle.hpp  Trimesh.hpp
src/Graphics/TextureViews/: R8TextureView.hpp  Rg8TextureView.hpp  Rgb8TextureView.hpp  Rgba8SrgbTextureView.hpp  Rgba8TextureView.hpp  Rgbe9TextureView.hpp
src/Platform/: WinLogOutput.cpp  WinLogOutput.hpp
src/Renderer/: BvhTree.cpp  BvhTree.hpp  PathTracer.cpp  PathTracer.hpp  Tonemapping.hpp
src/Scene/: Actor.hpp  Scene.cpp  Scene.hpp  SceneLoader.cpp  SceneLoader.hpp
